@@ -1,3 +1,7 @@
+2006-07-12  Mike Cvet  <mcvet@redhat.com>
+
+	* memory/MemoryWindow.java: Cleaned up and commented
+
 2006-07-11  Mike Cvet  <mcvet@redhat.com>
 
 	* memory/MemoryWindow.java: Cleaned up some private 
